@@ -36,8 +36,9 @@ $ -> Language fix or change
  # [#24629] mod_menu can create invalid id attribute HTML (Rouven Weßling)
  # [#26192] Use local storage for tabs (Rouven Weßling)
  # [#26076] Joomla 1.7 alpha (Rune Sjøen, bill richardson)
- # [#26104] JModelForm validate method is missing group option
- ^ [#26079] Turn multiselect into a behavior
+ # [#26104] JModelForm validate method is missing group option (Roland Dalmulder)
+ ^ [#26079] Turn multiselect into a behavior (Rouven Weßling)
+ # [#25981] Missed time offset in RSS/Atom feeds in 1.6.x (Sergey Novikov)
 
 18-Jun-2011 Jean-Marie Simonet
 # [#26179] Joomla 1.7.0 find updates and proposes 1.6.3. Thanks Christophe
